<resources>
    <string name="app_name">Plagiarism Checker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_secure">SecureActivity</string>
    <string name="login_now">Login Now</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">login</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="enter_name">Enter Name</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have account</string>
    <string name="full_name">Full Name</string>
    <string name="email_account">Email Account</string>
    <string name="username">Username</string>
    <string name="please_check_your_email_you_will_receive_a_verification_code_via_email">Please check your email you will receive a verification code via Email</string>
    <string name="resend_text">If you didn\'t receive an email then click on resend email button</string>
    <string name="hash">####</string>
    <string name="confirm">Confirm</string>
    <string name="resendEmail">Resend Email</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="account">Account</string>
    <string name="reports">Reports</string>
    <string name="logout">Logout</string>
    <string name="upload_file">Select File</string>
    <string name="docx_pdf_txt">.docx/.pdf/.txt</string>
    <string name="check_plagiarism">Check Plagiarism</string>
    <string name="checking">Checking:</string>
    <string name="unique">Unique</string>
    <string name="_1000">1000</string>
    <string name="quries_limit"><u>Quries Limit</u></string>
    <string name="quries_used"><u>Quries Used</u></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="about_us">Plagiarism checker App is provided by prepostseo.com \n\nUsing this App you can check plagiarism by selecting .docx, .pdf and .txt files. You can also type your own paragraph to check plagiarism. Our duplicate content checker app is useful for students and teachers to check their papers for plagiarism.\n\nPlagiarism Checker scans your text or documents sentence by sentence and display results accordingly. \n\n<b>Understanding Results:</b> \n\nAfter Checking Completes, you will see two tabs “Overall Results” &amp; “Sources”. In the first tab, you can check each sentence either it\'s plagiarized or unique. In the second tab, you can source from where content is copied.\n\n<b>What is a Query?</b> \n\nA single search query is a sentence that is checked for plagiarism. e-g: if you check an article of 500 words it consumes 10-15 queries to check plagiarism. All Memberships / Plans are according to those queries.\n\n<b>Does this App checks every sentence?</b> \n\nOur Plagiarism App checks each and every sentence carefully over the billions of web pages. We do not check your sentences randomly.\n\n<b>Is Content is checked saved anywhere?</b> \n\nWe respect our users, any article you check at prepostseo.com is 100% Safe &amp; Secure. we do not share any of your content publicly. Also, we do not save your content in our database.\n\n<b>Can I use same login details to sign in at prepostseo.com</b> \n\nYes you can use same login details to sign in at prepostseo.com\n\nIf you need any help regarding our plagiarism checker App you can contact us at<font fgcolor="#2989c6"> support@prepostseo.com </font></string>
    <string name="title_activity_result">Results</string>
</resources>
