<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/mainGrounp">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:checked="true"
            android:title="@string/app_name" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_reports"
            android:title="@string/reports" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_box"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_plans"
            android:icon="@drawable/ic_shopping_cart"
            android:title="Plans" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
    <group android:checkableBehavior="single"
         android:id="@+id/aboutGroup">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_us"
            android:title="About Us" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact_mail"
            android:title="Contact Us" />
    </group>

    <group android:checkableBehavior="single"  android:id="@+id/exitGroup">
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="Exit" />
    </group>


</menu>
