<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
   >
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">
               <Button
                   android:layout_width="100dp"
                   android:layout_height="40dp"
                   android:id="@+id/uploadFile"
                   android:text="@string/upload_file"
                   style="@style/Button"
                   android:textAllCaps="false"
                   android:layout_marginRight="10dp"
                   android:background="@color/buttonUploadFile" />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/docx_pdf_txt"
                   android:textColor="@color/buttonGray" />
           </LinearLayout>
           <View
               style="@style/Divider"
               android:layout_marginTop = "1dp"
               android:layout_marginBottom = "10dp"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="OR/"
               android:layout_marginBottom = "10dp"
               android:textColor="@color/buttonGray" />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="200dp"
               android:weightSum="10"
               android:background="@drawable/shadow_background">
               <RelativeLayout
                   android:layout_width="0dp"
                   android:layout_height="200dp"
                   android:background="@color/colorAccent"
                   android:layout_weight="2">
                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/ic_mode_edit"
                       android:id="@+id/pencil_icon_text_view"
                       android:layout_centerHorizontal="true"
                       android:layout_centerVertical="true"/>
                   <View
                       style="@style/Divider"
                       android:layout_below="@+id/pencil_icon_text_view"
                       android:layout_width="24dp"
                       android:layout_marginTop="2dp"
                       android:layout_centerHorizontal="true"
                       android:background="@color/colorPrimary" />
                   <View
                     style="@style/Divider"
                     android:layout_above="@+id/limit"
                     android:layout_margin="5dp"
                     android:background="@color/colorPrimary" />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="LIMIT"
                       android:id="@+id/limit"
                       android:textColor="@color/colorPrimary"
                       android:layout_centerHorizontal="true"
                      android:layout_above="@+id/limit_number"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/_1000"
                       android:layout_marginBottom="10dp"
                       android:id="@+id/limit_number"
                       android:textColor="@color/colorPrimary"
                       android:layout_centerHorizontal="true"
                       android:layout_alignParentBottom="true"/>

               </RelativeLayout>
               <EditText
                   android:layout_width="0dp"
                   android:layout_weight="8"
                   android:layout_height="200dp"
                   android:background="@android:color/transparent"
                   android:scrollbarStyle="insideInset"
                   android:scrollbars="vertical"
                   android:overScrollMode="always"
                   android:hint="Type your text here..."
                   android:textAlignment="viewStart"
                   android:padding="10dp"
                   android:gravity="start"
                   android:id="@+id/content"/>
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="3dp"
               android:gravity="end">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Words:"
               android:textSize="8sp"
               android:textColor="@color/colorAccent"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="5000"
               android:textSize="8sp"
               android:textColor="@color/buttonGray"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:paddingLeft="10dp"
               android:text="Chars:"
               android:textSize="8sp"
               android:textColor="@color/colorAccent"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="5000"
               android:textSize="8sp"
               android:textColor="@color/buttonGray"/>
           </LinearLayout>

           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/check_plagiarism"
               style="@style/Button"
               android:layout_margin="20dp"
               android:textAllCaps="false"
               android:id="@+id/check" />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="20dp"
               android:gravity="center">
           <TextView
               android:layout_width = "wrap_content"
               android:layout_height = "wrap_content"
               android:text = "@string/checking"
               android:textColor = "@color/buttonGray"
               android:layout_marginRight="10dp"
               android:textSize = "20sp" />
           <TextView
               android:layout_width = "wrap_content"
               android:layout_height = "wrap_content"
               android:id="@+id/api_progress_text_view"
               android:text = "0%"
               android:textColor = "@color/colorBlack"
               android:textSize = "20sp"
               android:textStyle="bold" />
           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:weightSum="5">
               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="2"
                   android:orientation="vertical"
                   android:gravity="center"
                   android:padding="15dp"
                   android:background="@drawable/shadow_background">
                   <TextView
                       android:layout_width = "wrap_content"
                       android:layout_height = "wrap_content"
                       android:text = "0%"
                       android:id="@+id/unique_perc_text_view"
                       android:textColor = "@color/colorAccent"
                       android:textSize = "20sp"
                       android:textStyle="bold" />
                   <TextView
                       android:layout_width = "wrap_content"
                       android:layout_height = "wrap_content"
                       android:text = "@string/unique"
                       android:textColor = "@color/colorAccent"
                       android:textSize = "20sp"
                       android:textStyle="bold" />
               </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="2"
                   android:orientation="vertical"
                   android:gravity="center"
                   android:layout_gravity="end"
                   android:padding="15dp"
                   android:background="@drawable/shadow_background">
                   <TextView
                       android:layout_width = "wrap_content"
                       android:layout_height = "wrap_content"
                       android:text = "0%"
                       android:id="@+id/plag_perc_text_view"
                       android:textColor = "@android:color/holo_red_light"
                       android:textSize = "20sp"
                       android:textStyle="bold" />
                   <TextView
                       android:layout_width = "wrap_content"
                       android:layout_height = "wrap_content"
                       android:text = "@string/unique"
                       android:textColor = "@android:color/holo_red_light"
                       android:textSize = "20sp"
                       android:textStyle="bold" />
               </LinearLayout>

           </LinearLayout>

       </LinearLayout>

   </ScrollView>
</RelativeLayout>
<!--<EditText  android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_alignParentTop="true"-->
<!--android:id="@+id/content"/>-->


<!--<Button-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:id="@+id/uploadFile"-->
<!--android:text="Upload File"-->
<!--android:layout_alignParentBottom="true"/>-->

<!--<Button-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:id="@+id/check"-->
<!--android:text="Check"-->
<!--android:layout_alignParentBottom="true"-->
<!--android:layout_toRightOf="@+id/uploadFile"-->
<!--android:layout_alignParentRight="true"/>-->
